<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food-E</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <!--Strings receipt search -->
    <string name="hint_receipt">Enter text for search</string>
    <string-array name="sort_options">
        <item>Date</item>
        <item>Store</item>
        <item>Total</item>
    </string-array>
    <string name="receipt_col_0">Date</string>
    <string name="receipt_col_1">Store</string>
    <string name="receipt_col_2">Total</string>
    <string name="receipt_search_fail">No Element found</string>
    <!--Strings Share Food-->
    <string name="share_description_header">Description</string>
    <string name="share_category_header">Category</string>
    <string name="share_add_hint_description">Enter short description of food to share</string>
    <string name="expire">Expiry Date</string>
    <string name="available">Available</string>
    <string name="share_date_hint">10/22/2016</string>
    <string name="share_time_hint_from">10:00</string>
    <string name="share_time_hint_to">15:00</string>
    <string name="share_time_to">to</string>
    <string-array name="category_options">
        <item>Meal</item>
        <item>Drink</item>
        <item>Fruit</item>
        <item>Vegetables</item>
        <item>Meat</item>
        <item>Vegetarian</item>
        <item>Dessert</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
