<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shared_food_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bille.group3.food_e.SharedFoodAddActivity">
    <ImageView
        android:id="@+id/imageAddShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_camera"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_description_header"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/enter_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"
        android:hint="@string/share_add_hint_description"
        android:layout_marginLeft="10dp"
        android:imeOptions="actionNext"
        android:selectAllOnFocus="false" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_category_header"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        />
    <Spinner
        android:id="@+id/spinner_add_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/expire"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:paddingLeft="50dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_text_exp"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:hint="@string/share_date_hint"
            android:inputType="date"
            android:layout_marginLeft="10dp"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="false"
            />
        <EditText
            android:id="@+id/edit_from"
            android:layout_width="110dp"
            android:inputType="time"
            android:layout_height="wrap_content"
            android:hint="@string/share_time_hint_from"
            android:paddingLeft="60dp"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="false" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/share_time_to"
           android:textSize="16sp"/>
        <EditText
            android:id="@+id/edit_to"
            android:inputType="time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_time_hint_to"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="false"
            />
    </LinearLayout>
    <Button
        android:id="@+id/button_confirm_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="confirm"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
</LinearLayout>
