<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bille.group3.food_e.ReceiptSearchFragment"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/receiptSearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_receipt"
        android:ems="10"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="false" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bill_sort_spinner" />

    <ScrollView
        android:id="@+id/receiptContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/receiptTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:background="@color/back_table">

            <TableRow
                android:id="@+id/headerTableReceipts"
                android:background="@color/grid_2">
                <TextView
                    android:text="@string/receipt_col_0"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textSize="@dimen/receipt_table_header_textsize" />

                <TextView
                    android:text="@string/receipt_col_1"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textSize="@dimen/receipt_table_header_textsize"/>

                <TextView
                    android:text="@string/receipt_col_2"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:textSize="@dimen/receipt_table_header_textsize"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>